# ldg_core

./: CMakeLists.txt  Makefile  README.md  license.md  readme.md  run_examples.sh  run_examples_1k.sh  run_examples_full.sh  supertiles_DistFunc.h  supertiles_DrawBase.h  supertiles_DrawCairo.h  supertiles_Filter.h  supertiles_PO.h  supertiles_QuadTree.h  supertiles_assignPartition.h  supertiles_configTypes.h  supertiles_drawTiles.h  supertiles_place.cpp  supertiles_place.h  supertiles_place_DrawOpts.h  supertiles_place_DrawTile.h  supertiles_place_LevelIndicator.h  supertiles_place_NodeLeafCounts.h  supertiles_place_adaptAssignment.h  supertiles_place_assignGroupHungarian_.h  supertiles_place_assignGroupPermutations.h  supertiles_place_assignGroupPermutations_.h  supertiles_place_cost.h  supertiles_place_data.h  supertiles_place_init.h  supertiles_place_log.h  supertiles_place_plan.h  supertiles_place_presentation.h  supertiles_place_term.h  supertiles_place_useCases.h
